# 2021_Group_3

./: .gitignore  3_d___vector_8cpp.html  3_d___vector_8cpp.js  3_d___vector_8cpp__incl.dot  3_d___vector_8h.html  3_d___vector_8h.js  3_d___vector_8h__dep__incl.dot  3_d___vector_8h__incl.dot  3_d___vector_8h_source.html  CMakeLists.txt  Doxyfile  README.md  TEAM.md  _cell_8cpp.html  _cell_8cpp.tex  _cell_8cpp__incl.dot  _cell_8h.html  _cell_8h__dep__incl.dot  _cell_8h__incl.dot  _cell_8h_source.html  _current___working___program_2main_8cpp.html  _current___working___program_2main_8cpp.js  _current___working___program_2main_8cpp__incl.dot  _custom___mod___library_2src_2main_8cpp.html  _custom___mod___library_2src_2main_8cpp.js  _custom___mod___library_2src_2main_8cpp__incl.dot  _done_2filter_8h_source.html  _filter_2mainwindow_8h_source.html  _filter___done_2mainwindow_8h_source.html  _material_8cpp.html  _material_8cpp__incl.dot  _material_8h.html  _material_8h__dep__incl.dot  _material_8h__incl.dot  _material_8h_source.html  _model_8cpp.html  _model_8cpp__incl.dot  _model_8h.html  _model_8h__dep__incl.dot  _model_8h__incl.dot  (+173 more)
.github/workflows/: doxygen-deploy.yml  makes-test.yml  test.yml
3D Vector/: 3D_Vector - 2.cpp  3D_Vector - 2.h  main.cpp
3D Vector/3D_Vector_2/3D_Vector_2/: 3DVector.h  3D_Vector.cpp  CMakeLists.txt  main.cpp
Cell/: 2021_Group_3 - Shortcut.lnk  README_CELL.txt
Cell/Cell Class Testing File/: CMakeLists.txt
Cell/Cell Class Testing File/Cell/: CMakeProject1.cpp
Cell/Cell_Redone_Inital_Integration/: 3D_Vector_Copy.cpp
Current_Working_Program/: CMakeLists.txt  CMakeSettings.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Current_Working_Program/Custom_Mod_Library/: CMakeLists.txt
Current_Working_Program/Custom_Mod_Library/include/: Material.h
Current_Working_Program/Custom_Mod_Library/src/: 3D_Vector.cpp  Cell.cpp  Model.cpp
Current_Working_Program/Custom_Mod_Library/tests/: CMakeLists.txt  testMaterial.cpp
Current_Working_Program/Icons/: icons.qrc
Custom .Mod Library/: CMakeLists.txt  main.cpp
Custom .Mod Library/3D Vector/: 3DVector.h  3D_Vector.cpp  3D_Vector_2.cbp  main.cpp
Custom .Mod Library/3D Vector/3D_Vector_2/3D_Vector_2/: 3DVector.h  3D_Vector_2.layout
Custom .Mod Library/Cell/Cell_Redone_Inital_Integration/: main.cpp
Custom .Mod Library/Material/: CMakeLists.txt
Custom .Mod Library/Model/: CMakeLists.txt
Custom .Mod Library/Tests/: testModel.cpp
Custom Model Library/: CMakeLists.txt  main.cpp
Custom Model Library/3D Vector/: 3D_Vector.cpp  3D_Vector.h
Custom Model Library/Material/: CMakeLists.txt  Material.cpp  Material.h
Custom Model Library/Model/: Model.cpp
Custom Model Library/Tests/: CMakeLists.txt
Custom_Mod_Library/: CMakeLists.txt
Custom_Mod_Library/3D Vector/: CMakeLists.txt
Custom_Mod_Library/3D_Vector/: 3D_Vector.cpp  CMakeLists.txt
Custom_Mod_Library/Cell/: Cell.cpp  Cell.h  test.cpp
Custom_Mod_Library/Cell/Cell Class Testing File/Cell/: CMakeLists.txt
Custom_Mod_Library/Cell/Cell_Redone_Inital_Integration/: 3DVector_Copy.h
Custom_Mod_Library/Material/: Material.cpp  Material.h
Custom_Mod_Library/Model/: Model.cpp  Model.h
Custom_Mod_Library/include/: 3D_Vector.h  Cell.h  Material.h  Model.h
Custom_Mod_Library/src/: 3D_Vector.cpp  CMakeLists.txt  Cell.cpp  Material.cpp  Model.cpp  main.cpp
Custom_Mod_Library/tests/: CMakeLists.txt  test3D_Vector.cpp  testCell.cpp  testMaterial.cpp  testModel.cpp
Dongkun_Test/: CMakeLists.txt  ModelRender.cpp  ModelRender.h  filter.cpp  filter.h  form.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Dongkun_Test/Icons/: icons.qrc
Dongkun_Test_New/: CMakeLists.txt  CMakeLists.txt.user.0a398d2  IFWin.cmake  deploy-qt-windows.cmake  deploy-qt-windows.cmake.in  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Dongkun_Test_old/: ModelRender.cpp
Dongkun_Test_oleVersion/: ModelRender.cpp  filter.cpp  form.h  mainwindow.h
Doxygen/: Doxyfile
Filter/: CMakeLists.txt  filter.cpp  filter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediator.cpp  mediator.h
Filter_Done/: CMakeLists.txt  ModelRender.cpp  ModelRender.h  filter.cpp  filter.h  form.cpp  listview.cpp  listview.h.autosave  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
Filter_Done/Icons/: icons.qrc
Icons/: icons.qrc
Installer/: CMakeLists.txt
Material/: CMakeLists.txt  Material.cpp
Model/: CMakeLists.txt  Model.cpp  model.cpp  model.h
QT Project/Group3Project/: CMakeLists.txt
QtVTKExample/: CMakeLists.txt  TestGeometricObjectsDemo.dng  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtVTKExample/Icons/: icons.qrc
QtVTKExample_final_2/: CMakeLists.txt  CMakeLists.txt.user.0a398d2  IFWin.cmake  ModelRender.cpp  ModelRender.h  deploy-qt-windows.cmake  filter.cpp  filter.h  form.cpp  form.h  licence.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtVTKExample_multi_tabs/: filter.cpp  form.cpp  form.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myapp.rc
QtVTK_Template/: CMakeLists.txt  Render_Object.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrc_icons.cpp
Qt_VTK_Project/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
exe/: InstallationLog.txt  components.xml  maintenancetool.ini
exe/Licenses/: licence.txt
exe/installerResources/QtVTKExample/: 2.3.4content.txt  2.3.4iconengines.txt  2.3.4imageformats.txt  2.3.4platforms.txt  2.3.4styles.txt  2.3.4translations.txt
exe/installerResources/Unspecified/: 2.3.4content.txt
latex/: md__r_e_a_d_m_e.tex  refman.tex
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+17 more)
