# CMakeList.txt : CMake project for Material, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Material")

# Add source to this project's executable.
add_executable (Material "Material.cpp" "Material.h")

# TODO: Add tests and install targets if needed.
