# CMakeList.txt : CMake project for Custom Model Class, include source and define
# project specific logic here.

cmake_minimum_required (VERSION 3.8)








#add_executable(testModel "testModel.cpp")
#add_executable(test3D_Vector "test3D_Vector.cpp")
#add_executable(testCell "testCell.cpp")



#target_link_libraries(testModel PRIVATE LibsModule)
#target_link_libraries(test3D_Vector PRIVATE LibsModule)
#target_link_libraries(testCell PRIVATE LibsModule)




#add_test(testModel testModel)
#add_test(test3D_Vector test3D_Vector)
#add_test(testCell testCell)

