cmake_minimum_required(VERSION 3.22)
project( 3D_Vector )
set( CMAKE_CXX_FLAGS "-std=c++11" )
set( CMAKE_BUILD_TYPE "Debug" )
include_directories( "/usr/include/iostream" )
#add_library(3DVector 3DVector.h 3D_Vector.cpp)
add_library(3DVector SHARED  3D_Vector.cpp)

add_executable(3DVector main.cpp)
target_link_libraries(3DVector 3DVector)